# LogCore

./: .gitignore  CMakeLists.txt  Global.cpp  Global.h  Guard.h  Makefile  _wrap_malloc.cpp  defs.cpp  defs.h  link_tool.cpp  link_tool.h  log_opr.cpp  log_opr.h  main.cpp  main_client.cpp  mem_base.cpp  mem_base.h  mem_calc.cpp  mem_calc.h  mem_check.cpp  mem_check.h  net_client.cpp  net_client.h  net_server.cpp  net_server.h  notice.txt  platform_base.cpp  platform_base.h  snippets.cpp  stdafx.h  string_base.cpp  string_base.h  thread_base.cpp  thread_base.h  time_calc.cpp  time_calc.h  trace_worke.h  trace_worker.cpp  user_manager.cpp  user_manager.h  (+1 more)
Libs/Json/: Makefile
LogCore/: LogCore.sln  LogCore.vcxproj  LogCore.vcxproj.filters  ReadMe.txt  stdafx.cpp
backtrace/: DahuaBacktrace.h  backtrace.rar  bt.c  callstack.c  callstack.h  common.h  elf_parser.c  elf_parser.h  proc_parser.c  proc_parser.h
traceworker/: CMakeLists.txt
traceworker/traceTest/: CMakeLists.txt  ReadMe.txt  stdafx.cpp  traceTest.cpp  traceTest.sln  traceTest.vcproj
traceworker/traceworker/: CMakeLists.txt  IFile.cpp  IFile.h  ReadMe.txt  file_manager.cpp  file_manager.h  link_tool.cpp  link_tool.h  locale_file.cpp  locale_file.h  log_opr.cpp  log_opr.h  mem_calc.cpp  mem_calc.h  platform_base.cpp  platform_base.h  stdafx.cpp  time_calc.cpp  time_calc.h  trace_base.cpp  trace_base.h  trace_worker.cpp  trace_worker.h  traceworker.sln  traceworker.vcproj
unwind/: mem_leak_check.cpp
unwind/include/: config.h  libunwind-sh.h  libunwind.h
