PROJECT(HMSProxy)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(vehicleProxy_VERSION 1.0)
#include directories
INCLUDE_DIRECTORIES(
    traceworker
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/traceTest/build)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/traceTest/lib)

ADD_SUBDIRECTORY(traceworker)
ADD_SUBDIRECTORY(traceTest)

